--- a/it-312/index.html
+++ b/it-312/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Digital Environment Courses | CWU Dept. of Information Technology Management</title>
+    <title>IT 312 | Designing Digital Environments</title>
 </head>
 <body>
     <p>Under construction</p>
