--- a/it-312/test-student/index.html
+++ b/it-312/test-student/index.html
@@ -6,8 +6,7 @@
     <title>IT 312 | Designing Digital Environments</title>
 </head>
 <body>
-    <ul>
-        <li><a href="/test-student">Test Student</a></li>
-        </ul>
+    <header><h1>Test Student</h1></header>
+    <p>This is a test student page.</p>
 </body>
 </html>
