minor update to test student url

--- a/it-312/index.html
+++ b/it-312/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <ul>
-        <li><a href="/test-student">Test Student</a></li>
+        <li><a href="test-student">Test Student</a></li>
         </ul>
 </body>
 </html>
