added dropdown menu to main index

--- a/index.html
+++ b/index.html
@@ -19,10 +19,17 @@
 
             <nav>
                 <ul>
-                    <li><a href="">About</a></li>
-                    <li><a href="">Courses</a></li>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#" class="dropbtn" onclick="toggleDropdown()">Courses</a>
+                        <div class="dropdown-content">
+                            <a href="#">IT 248</a>
+                            <a href="#">IT 312</a>
+                            <a href="#">Others?</a>
+                        </div>
+                    </li>
                     <li><a href="">Resources</a></li>
                     <li><a href="">Credits</a></li>
+                    <li><a href="archive">Archive</a></li>
                 </ul>
             </nav>
 
@@ -38,5 +45,6 @@
                 <footer>
                     <p><span>Questions? Contact: </span><a href="mailto:admin@fval.org">admin@fval.org</a></p>
                 </footer>
+                <script src="dropdown.js"></script>
 </body>
 </html>
