Updated dropdown list for courses link

--- a/index.html
+++ b/index.html
@@ -20,11 +20,10 @@
             <nav>
                 <ul>
                     <li><a href="#">Home</a></li>
-                    <li><a href="#" class="dropbtn" onclick="toggleDropdown()">Courses</a>
+                    <li class="dropdown"><a href="#" class="dropbtn">Courses</a>
                         <div class="dropdown-content">
-                            <a href="#">IT 248</a>
-                            <a href="#">IT 312</a>
-                            <a href="#">Others?</a>
+                            <a href="it-248">IT 248</a>
+                            <a href="it-312">IT 312</a>
                         </div>
                     </li>
                     <li><a href="">Resources</a></li>
@@ -45,6 +44,5 @@
                 <footer>
                     <p><span>Questions? Contact: </span><a href="mailto:admin@fval.org">admin@fval.org</a></p>
                 </footer>
-                <script src="dropdown.js"></script>
 </body>
 </html>
