--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
                             <a href="it-312">IT 312</a>
                         </div>
                     </li>
-                    <li><a href="">Resources</a></li>
-                    <li><a href="">Credits</a></li>
+                    <li><a href="#">Resources</a></li>
+                    <li><a href="#">Credits</a></li>
                     <li><a href="archive">Archive</a></li>
                 </ul>
             </nav>
