updated main nav styling

--- a/index.html
+++ b/index.html
@@ -19,16 +19,17 @@
 
             <nav>
                 <ul>
-                    <li><a href="#">Home</a></li>
-                    <li class="dropdown"><a href="#" class="dropbtn">Courses</a>
+                    <li class="current-page">Home</li>
+                    <li class="dropdown">
+                        <a href="#" class="dropbtn">Courses</a>
                         <div class="dropdown-content">
-                            <a href="it-248">IT 248</a>
-                            <a href="it-312">IT 312</a>
+                            <a href="it-248/index.html">IT 248</a>
+                            <a href="it-312/index.html">IT 312</a>
                         </div>
                     </li>
                     <li><a href="#">Resources</a></li>
                     <li><a href="#">Credits</a></li>
-                    <li><a href="archive">Archive</a></li>
+                    <li><a href="archive/index.html">Archive</a></li>
                 </ul>
             </nav>
 
@@ -44,5 +45,6 @@
                 <footer>
                     <p><span>Questions? Contact: </span><a href="mailto:admin@fval.org">admin@fval.org</a></p>
                 </footer>
+                <script src="script.js"></script>
 </body>
 </html>
