--- a/it-312/index.html
+++ b/it-312/index.html
@@ -4,8 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>IT 312 | Designing Digital Environments</title>
+    <link href="../styles.css" rel="stylesheet">
 </head>
 <body>
+     <!-- Page Header -->
+           
+     <header> 
+        <h1>The Digital Environment</h1>
+        <p>a creative portfolio for students</p> 
+    </header>
+
+<!-- Site Navigation -->
+
+    <nav>
+        <ul>
+            <li><a href="../index.html">Home</a></li>
+            <li class="dropdown">
+                <a href="#" class="dropbtn">Courses</a>
+                <div class="dropdown-content">
+                    <a href="it-248/index.html">IT 248</a>
+                    <a class="current-page">IT 312</a>
+                </div>
+            </li>
+            <li><a href="#">Resources</a></li>
+            <li><a href="#">Credits</a></li>
+            <li><a href="archive/index.html">Archive</a></li>
+        </ul>
+    </nav>
     <ul>
         <li><a href="test-student">Test Student</a></li>
         </ul>
