--- a/it-312/index.html
+++ b/it-312/index.html
@@ -34,6 +34,6 @@
     <ul>
         <li><a href="test-student">Test Student</a></li>
         </ul>
-        <script src="script.js"></script>
+        <script src="../script.js"></script>
 </body>
 </html>
