updated styling for responsiveness and updated navigation links

--- a/it-312/index.html
+++ b/it-312/index.html
@@ -20,15 +20,15 @@
         <ul>
             <li><a href="../index.html">Home</a></li>
             <li class="dropdown">
-                <a href="#" class="dropbtn">Courses</a>
+                <a href="#" class="dropbtn active">Courses</a>
                 <div class="dropdown-content">
-                    <a href="it-248/index.html">IT 248</a>
-                    <div class="current-page">IT 312</div>
+                    <a href="../it-248/index.html">IT 248</a>
+                    <a href="#" class="active">IT 312</a>
                 </div>
             </li>
-            <li><a href="#">Resources</a></li>
-            <li><a href="#">Credits</a></li>
-            <li><a href="archive/index.html">Archive</a></li>
+            <li><a href="../resources/index.html">Resources</a></li>
+            <li><a href="../credits/index.html">Credits</a></li>
+            <li><a href="../archive/index.html">Archive</a></li>
         </ul>
     </nav>
     <ul>
