--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Page Header -->
            
             <header> 
-                <h1>The Digital Environment</h1>
+                <h1>The <span>Digital</span> Environment</h1>
                 <p>a creative portfolio for students</p> 
             </header>
 
@@ -19,7 +19,7 @@
 
             <nav>
                 <ul>
-                    <li class="current-page">Home</li>
+                    <li><a href="index.html" class="active">Home</a></li>
                     <li class="dropdown">
                         <a href="#" class="dropbtn">Courses</a>
                         <div class="dropdown-content">
@@ -27,12 +27,14 @@
                             <a href="it-312/index.html">IT 312</a>
                         </div>
                     </li>
-                    <li><a href="#">Resources</a></li>
-                    <li><a href="#">Credits</a></li>
+                    <li><a href="resources/index.html">Resources</a></li>
+                    <li><a href="credits/index.html">Credits</a></li>
                     <li><a href="archive/index.html">Archive</a></li>
                 </ul>
             </nav>
-
+   <div id="banner">
+        <img src="richard-horvath-cPccYbPrF-A-unsplash.jpg" alt="decorative abstract blob wallpaper">
+    </div>
             <main>
 
     <!-- Introduction -->
