--- a/it-248/index.html
+++ b/it-248/index.html
@@ -20,17 +20,18 @@
         <ul>
             <li><a href="../index.html">Home</a></li>
             <li class="dropdown">
-                <a href="#" class="dropbtn">Courses</a>
+                <a href="#" class="dropbtn active">Courses</a>
                 <div class="dropdown-content">
-                    <div class="current-page">IT 248</div>
-                    <a href="it-312/index.html">IT 312</a>
+                    <a href="#" class="active">IT 248</a>
+                    <a href="../it-312/index.html">IT 312</a>
                 </div>
             </li>
-            <li><a href="#">Resources</a></li>
-            <li><a href="#">Credits</a></li>
-            <li><a href="archive/index.html">Archive</a></li>
+            <li><a href="../resources/index.html">Resources</a></li>
+            <li><a href="../credits/index.html">Credits</a></li>
+            <li><a href="../archive/index.html">Archive</a></li>
         </ul>
     </nav>
+ 
     <ul>
         <li><a href="test-student">Test Student</a></li>
         </ul>
