updated first student link for IT 312

--- a/it-312/index.html
+++ b/it-312/index.html
@@ -32,8 +32,8 @@
         </ul>
     </nav>
     <ul>
-        <li><a href="test-student">Test Student</a></li>
-        </ul>
-        <script src="../script.js"></script>
+        <li><a href="../ahmedf/index.html">Test Student</a></li>
+    </ul>
+    <script src="../script.js"></script>
 </body>
 </html>
