cleaned up code in all index files

--- a/it-312/index.html
+++ b/it-312/index.html
@@ -1,39 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IT 312 | Designing Digital Environments</title>
-    <link href="../styles.css" rel="stylesheet">
-</head>
-<body>
-     <!-- Page Header -->
-           
-     <header> 
-        <h1>The Digital Environment</h1>
-        <p>a creative portfolio for students</p> 
-    </header>
-
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>IT 312 | Designing Digital Environments</title>
+        <link href="../styles.css" rel="stylesheet">
+    </head>
+    <body>
+<!-- Site Header -->           
+        <header> 
+            <h1>The Digital Environment</h1>
+            <p>a creative portfolio for students</p> 
+        </header>
 <!-- Site Navigation -->
-
-    <nav>
-        <ul>
-            <li><a href="../index.html">Home</a></li>
-            <li class="dropdown">
-                <a href="#" class="dropbtn active">Courses</a>
-                <div class="dropdown-content">
-                    <a href="../it-248/index.html">IT 248</a>
-                    <a href="#" class="active">IT 312</a>
-                </div>
-            </li>
-            <li><a href="../resources/index.html">Resources</a></li>
-            <li><a href="../credits/index.html">Credits</a></li>
-            <li><a href="../archive/index.html">Archive</a></li>
-        </ul>
-    </nav>
-    <ul>
-        <li><a href="../ahmedf/index.html">Test Student</a></li>
-    </ul>
-    <script src="../script.js"></script>
-</body>
+        <nav>
+            <ul>
+                <li><a href="../index.html">Home</a></li>
+                <li class="dropdown">
+                    <a href="#" class="dropbtn active">Courses</a>
+                    <div class="dropdown-content">
+                        <a href="../it-248/index.html">IT 248</a>
+                        <a href="#" class="active">IT 312</a>
+                    </div>
+                </li>
+                <li><a href="../resources/index.html">Resources</a></li>
+                <li><a href="../credits/index.html">Credits</a></li>
+                <li><a href="../archive/index.html">Archive</a></li>
+            </ul>
+        </nav>
+<!-- Main Content Area -->
+        <main>
+            <section>
+                <ul>
+                    <li><a href="../ahmedf/index.html">ahmedf</a></li>
+                </ul>
+            </section>
+        </main>
+<!-- Site Footer -->
+        <footer>
+            <p><span>Questions? Contact: </span><a href="mailto:admin@fval.org">admin@fval.org</a></p>
+        </footer>
+<!-- JavaScript Links -->
+        <script src="../script.js"></script>
+    </body>
 </html>
