added it 312 portfolio links

--- a/it-312/index.html
+++ b/it-312/index.html
@@ -30,11 +30,278 @@
         </nav>
 <!-- Main Content Area -->
         <main>
-            <section>
+            <header>
+                <h2>Designing Digital Environments - Spring 2025</h2>
+            </header>
+            <section class="portfolio">
                 <ul>
-                    <li><a href="../ahmedf/index.html">ahmedf</a></li>
+                    <li>
+                        <a href="../ahmedf">
+                            <div class="card">
+                                <div class="card-front">
+                                    <p>ahmedf</p>
+                                </div>
+                                <div class="card-back">
+                                    <p>ahmedf</p>
+                                </div>
+                            </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="../andersens">
+                            <div class="card">
+                                <div class="card-front">
+                                    <p>andersens</p>
+                                </div>
+                                <div class="card-back">
+                                    <p>andersens</p>
+                                </div>
+                            </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="../beishenkyzyz">
+                            <div class="card">
+                                <div class="card-front">
+                                    <p>beishenkyzyz</p>
+                                </div>
+                                <div class="card-back">
+                                    <p>beishenkyzyz</p>
+                                </div>
+                            </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="../cheonc">
+                            <div class="card">
+                                <div class="card-front">
+                                    <p>cheonc</p>
+                                </div>
+                                <div class="card-back">
+                                    <p>cheonc</p>
+                                </div>
+                            </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="../cookm">
+                            <div class="card">
+                                <div class="card-front">
+                                    <p>cookm</p>
+                                </div>
+                                <div class="card-back">
+                                    <p>cookm</p>
+                                </div>
+                            </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="../contrerase">
+                            <div class="card">
+                                <div class="card-front">
+                                    <p>contrerase</p>
+                                </div>
+                                <div class="card-back">
+                                    <p>contrerase</p>
+                                </div>
+                            </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="../fayyaza">
+                            <div class="card">
+                                <div class="card-front">
+                                    <p>fayyaza</p>
+                                </div>
+                                <div class="card-back">
+                                    <p>fayyaza</p>
+                                </div>
+                            </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="../furuci">
+                            <div class="card">
+                                <div class="card-front">
+                                    <p>furuci</p>
+                                </div>
+                                <div class="card-back">
+                                    <p>furuci</p>
+                                </div>
+                            </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="../garciaj">
+                            <div class="card">
+                                <div class="card-front">
+                                    <p>garciaj</p>
+                                </div>
+                                <div class="card-back">
+                                    <p>garciaj</p>
+                                </div>
+                            </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="../goetzi">
+                            <div class="card">
+                                <div class="card-front">
+                                    <p>goetzi</p>
+                                </div>
+                                <div class="card-back">
+                                    <p>goetzi</p>
+                                </div>
+                            </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="../gongoraleyvae">
+                            <div class="card">
+                                <div class="card-front">
+                                    <p>gongoraleyvae</p>
+                                </div>
+                                <div class="card-back">
+                                    <p>gongoraleyvae</p>
+                                </div>
+                            </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="../griffithsm">
+                            <div class="card">
+                                <div class="card-front">
+                                    <p>griffithsm</p>
+                                </div>
+                                <div class="card-back">
+                                    <p>griffithsm</p>
+                                </div>
+                            </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="../kalaycio">
+                            <div class="card">
+                                <div class="card-front">
+                                    <p>kalaycio</p>
+                                </div>
+                                <div class="card-back">
+                                    <p>kalaycio</p>
+                                </div>
+                            </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="../kalaycis">
+                            <div class="card">
+                                <div class="card-front">
+                                    <p>kalaycis</p>
+                                </div>
+                                <div class="card-back">
+                                    <p>kalaycis</p>
+                                </div>
+                            </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="../lokokam">
+                            <div class="card">
+                                <div class="card-front">
+                                    <p>lokokam</p>
+                                </div>
+                                <div class="card-back">
+                                    <p>lokokam</p>
+                                </div>
+                            </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="../mbuyambab">
+                            <div class="card">
+                                <div class="card-front">
+                                    <p>mbuyambab</p>
+                                </div>
+                                <div class="card-back">
+                                    <p>mbuyambab</p>
+                                </div>
+                            </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="../mcialwainc">
+                            <div class="card">
+                                <div class="card-front">
+                                    <p>mcialwainc</p>
+                                </div>
+                                <div class="card-back">
+                                    <p>mcialwainc</p>
+                                </div>
+                            </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="../obrienc">
+                            <div class="card">
+                                <div class="card-front">
+                                    <p>obrienc</p>
+                                </div>
+                                <div class="card-back">
+                                    <p>obrienc</p>
+                                </div>
+                            </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="../pedersene">
+                            <div class="card">
+                                <div class="card-front">
+                                    <p>pedersene</p>
+                                </div>
+                                <div class="card-back">
+                                    <p>pedersene</p>
+                                </div>
+                            </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="../umanam">
+                            <div class="card">
+                                <div class="card-front">
+                                    <p>umanam</p>
+                                </div>
+                                <div class="card-back">
+                                    <p>umanam</p>
+                                </div>
+                            </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="../washingtone">
+                            <div class="card">
+                                <div class="card-front">
+                                    <p>washingtone</p>
+                                </div>
+                                <div class="card-back">
+                                    <p>washingtone</p>
+                                </div>
+                            </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="../whitmorej">
+                            <div class="card">
+                                <div class="card-front">
+                                    <p>whitmorej</p>
+                                </div>
+                                <div class="card-back">
+                                    <p>whitmorej</p>
+                                </div>
+                            </div>
+                        </a>
+                    </li>
+                    <!-- Repeat for other items -->
                 </ul>
-            </section>
+            </section>               
         </main>
 <!-- Site Footer -->
         <footer>
