updated styling and added images

--- a/index.html
+++ b/index.html
@@ -37,8 +37,12 @@
             <h2>sriracha vexillologist</h2>
             <p>Meh cred pug kitsch direct trade 90's sriracha keffiyeh 8-bit yr iPhone meditation taiyaki PBR&amp;B kogi. Tattooed keffiyeh schlitz, distillery chia bitters quinoa +1 raw denim green juice tilde unicorn drinking vinegar keytar. Thundercats tumeric iPhone, letterpress raw denim fashion axe mixtape cray viral normcore celiac dreamcatcher squid. IPhone next level sriracha man braid taiyaki vegan. Post-ironic brooklyn next level actually coloring book wolf vape lo-fi fanny pack. 8-bit semiotics chicharrones readymade pabst sriracha kale chips.</p>                       
         </section>
+        </main>
         <footer>
+            <p>Copyright &copy; 2025. All Rights Reserved.</p>
             <p><span>Questions? Contact: </span><a href="mailto:admin@fval.org">admin@fval.org</a></p>
+            <p>Banner photo by <a href="https://unsplash.com/@ricvath?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Richard Horvath</a> on <a href="https://unsplash.com/photos/blue-and-white-heart-illustration-cPccYbPrF-A?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>
+      </p>
         </footer>
 <!-- JavaScript Links -->
         <script src="script.js"></script>
