--- a/it-312/index.html
+++ b/it-312/index.html
@@ -9,7 +9,7 @@
     <body>
 <!-- Site Header -->           
         <header> 
-            <h1>The Digital Environment</h1>
+            <h1>The <span>Digital</span> Environment</h1>
             <p>a creative portfolio for students</p> 
         </header>
 <!-- Site Navigation -->
@@ -28,6 +28,9 @@
                 <li><a href="../archive/index.html">Archive</a></li>
             </ul>
         </nav>
+        <div id="banner">
+            <img src="../richard-horvath-cPccYbPrF-A-unsplash.jpg" alt="decorative abstract flowing wallpaper">
+        </div>
 <!-- Main Content Area -->
         <main>
             <header>
@@ -305,7 +308,10 @@
         </main>
 <!-- Site Footer -->
         <footer>
+            <p>Copyright &copy; 2025. All Rights Reserved.</p>
             <p><span>Questions? Contact: </span><a href="mailto:admin@fval.org">admin@fval.org</a></p>
+            <p>Banner photo by <a href="https://unsplash.com/@ricvath?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Richard Horvath</a> on <a href="https://unsplash.com/photos/blue-and-white-heart-illustration-cPccYbPrF-A?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>
+      </p>
         </footer>
 <!-- JavaScript Links -->
         <script src="../script.js"></script>
