Removed class pages, created portfolio page, updated css

--- a/index.html
+++ b/index.html
@@ -16,13 +16,7 @@
         <nav>
             <ul>
                 <li><a href="index.html" class="active">Home</a></li>
-                <li class="dropdown">
-                    <a href="#" class="dropbtn">Courses</a>
-                    <div class="dropdown-content">
-                        <a href="it-248/index.html">IT 248</a>
-                        <a href="it-312/index.html">IT 312</a>
-                    </div>
-                </li>
+                <li><a href="portfolios/index.html">Portfolios</a></li>
                 <li><a href="resources/index.html">Resources</a></li>
                 <li><a href="credits/index.html">Credits</a></li>
                 <li><a href="archive/index.html">Archive</a></li>
@@ -39,8 +33,8 @@
         </section>
         </main>
         <footer>
-            <p>Copyright &copy; 2025. All Rights Reserved.</p>
-            <p><span>Questions? Contact: </span><a href="mailto:admin@fval.org">admin@fval.org</a></p>
+            <p>Copyright &copy; 2025.</p>
+            <p><span>Questions? Contact: </span><a href="mailto:john.durham@cwu.edu">john.durham@cwu.edu</a></p>
             <p>Banner photo by <a href="https://unsplash.com/@ricvath?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Richard Horvath</a> on <a href="https://unsplash.com/photos/blue-and-white-heart-illustration-cPccYbPrF-A?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>
       </p>
         </footer>
