updated portfolios with ellen's directory

--- a/portfolios/index.html
+++ b/portfolios/index.html
@@ -69,6 +69,18 @@
                         </a>
                     </li>
                     <li>
+                        <a href="../bjorgee">
+                            <div class="card">
+                                <div class="card-front">
+                                    <p>bjorgee</p>
+                                </div>
+                                <div class="card-back">
+                                    <p>bjorgee</p>
+                                </div>
+                            </div>
+                        </a>
+                    </li>
+                    <li>
                         <a href="../cheonc">
                             <div class="card">
                                 <div class="card-front">
