--- a/portfolios/index.html
+++ b/portfolios/index.html
@@ -117,6 +117,18 @@
                         </a>
                     </li>
                     <li>
+                        <a href="../durhamj">
+                            <div class="card">
+                                <div class="card-front">
+                                    <p>durhamj</p>
+                                </div>
+                                <div class="card-back">
+                                    <p>durhamj</p>
+                                </div>
+                            </div>
+                        </a>
+                    </li>
+                    <li>
                         <a href="../fayyaza">
                             <div class="card">
                                 <div class="card-front">
