--- a/durhamj/index.html
+++ b/durhamj/index.html
@@ -23,6 +23,10 @@
                Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium, officia atque iure amet laboriosam ipsa?</p>
             <p>Incidunt at temporibus neque natus dicta mollitia nihil ex, magnam pariatur consectetur corporis molestiae omnis.
             </p>
+            <p>
+               Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium, officia atque iure amet laboriosam ipsa?</p>
+            <p>Incidunt at temporibus neque natus dicta mollitia nihil ex, magnam pariatur consectetur corporis molestiae omnis.
+            </p>
          </article>
       </main>
 <!-- Page Footer  -->
