--- a/durhamj/index.html
+++ b/durhamj/index.html
@@ -19,6 +19,7 @@
             </header>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium, officia atque iure amet laboriosam ipsa?</p>
             <p>Incidunt at temporibus neque natus dicta mollitia nihil ex, magnam pariatur consectetur corporis molestiae omnis.</p>
+            <a href="#">Test Link</a>
          </article>
       </main>
 <!-- Page Footer  -->
