--- a/durhamj/index.html
+++ b/durhamj/index.html
@@ -1,36 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-   <head>
-      <meta charset="UTF-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <link href="css/styles.css" rel="stylesheet">
-      <title>Student Portfolio</title>
-   </head>
-   <body>
-<!-- Page Header  -->
-      <header>
-         <h1>Portfolio</h1>
-      </header>
-<!-- Main Content Area  -->
-      <main>
-         <article>
-            <header>
-               <h2>Code Crunch 1</h2>
-            </header>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium, officia atque iure amet laboriosam ipsa?</p>
-            <p>Incidunt at temporibus neque natus dicta mollitia nihil ex, magnam pariatur consectetur corporis molestiae omnis.</p>
-            <a href="#">elit dolor nihil</a>
-            <ol>
-               <li>corporis officia amet</li>
-               <li>ipsa atque</li>
-               <li>temporibus iure sit</li>
-            </ol>
-         </article>
-      </main>
-<!-- Page Footer  -->
-      <footer>
-       <p>Sources:</p>
-       <p>Copyright &copy; 2025</p>
-      </footer>
-   </body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Simple Blog</title>
+    <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+    <div class="container">
+        <h1>My Simple Blog</h1>
+
+        <div id="new-post">
+            <h2>Create a New Post</h2>
+            <input type="text" id="post-title" placeholder="Title">
+            <textarea id="post-content" placeholder="Content"></textarea>
+            <button id="publish-button">Publish</button>
+        </div>
+
+        <div id="posts">
+            <h2>Posts</h2>
+            </div>
+    </div>
+
+    <script src="script.js"></script>
+</body>
 </html>
