Example page overhaul
Index and CSS overhaul for example page.

--- a/durhamj/index.html
+++ b/durhamj/index.html
@@ -1,27 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simple Blog</title>
-    <link rel="stylesheet" href="css/styles.css">
-</head>
-<body>
-    <div class="container">
-        <h1>My Simple Blog</h1>
+   <head>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <link href="css/styles.css" rel="stylesheet">
+      <title>Student Name | Portfolio</title>
+   </head>
+   <body>
+<!-- Page Header  -->
+      <header class="page-header">
+         <h1>Portfolio</h1>
+      </header>
+<!-- Main Content Area  -->
+      <main>
+         <!-- Weekly Wrap #1 Starts Here-->
+         <article>
+            <header class="article-header">
+               <h2>Weekly Wrap - <datetime>4 April, 2025</datetime></h2>
+            </header>
+            <h3>Health Cronut la Croix</h3>
+            <p>I'm baby photo booth fingerstache af enamel pin quinoa. Portland unicorn keytar paleo letterpress banjo kinfolk. Pitchfork four loko meditation, locavore marfa af listicle sriracha helvetica cred vexillologist PBR&B. Pop-up hexagon thundercats master cleanse before they sold out, fashion axe copper mug yes plz literally cred mukbang chia gluten-free. Bodega boys skateboard ugh green juice. Hella marxism succulents mumblecore forage kale chips bespoke fixie shoreditch chartreuse tofu before they sold out.</p>
+            <h3>Offal Tofu Cred Green Juice</h3>
+            <p>Microdosing portland banh mi bitters, pitchfork ethical selvage plaid keytar jianbing kickstarter cronut. Truffaut schlitz ennui, migas aesthetic letterpress la croix. Health goth 8-bit microdosing, cronut offal gluten-free tbh cornhole swag YOLO vape man bun godard. Pitchfork semiotics hella salvia kickstarter jean shorts. Air plant thundercats kombucha gentrify portland.</p>
+            <h3>Blue Roof Pour-Over Man Bun</h3>
+            <p>Yuccie mukbang pickled activated charcoal. PBR&B selfies DSA mustache authentic. Gochujang kombucha big mood retro, you probably haven't heard of them +1 lomo. Tbh pour-over yr viral gorpcore poutine four dollar toast. Bicycle rights man bun try-hard, mlkshk roof party occupy succulents taxidermy kogi enamel pin brunch paleo poutine yr. Blue bottle street art waistcoat typewriter yr hot chicken polaroid helvetica pitchfork.</p>
+            <h3>Mlkshk Stumptown Hot Chicken</h3>
+            <p>Next level gluten-free whatever, tacos activated charcoal bitters woke. Mlkshk photo booth bicycle rights paleo, butcher DIY ugh mukbang bespoke occupy affogato jawn adaptogen artisan tofu. Tbh gentrify you probably haven't heard of them neutra umami slow-carb vegan dreamcatcher waistcoat. Tacos cornhole humblebrag ethical austin neutra plaid. Sustainable gatekeep ugh locavore deep v, palo santo stumptown skateboard big mood organic lumbersexual mustache cornhole hot chicken. Gluten-free artisan cliche mumblecore af, edison bulb meditation messenger bag.</p>
+            <footer class="article-footer">
+                <h3>Sources:</h3>
+                <ol>
+                    <li>Sherugar, S., & Budiu, R. (2016, August 21). <em>Direct manipulation: Definition</em>. Nielsen Norman Group. Retrieved March 19, 2025 from <a href="https://www.nngroup.com/articles/direct-manipulation/">https://www.nngroup.com/articles/direct-manipulation/</a></li>
+                    </ol>
+            </footer>
+         </article>
 
-        <div id="new-post">
-            <h2>Create a New Post</h2>
-            <input type="text" id="post-title" placeholder="Title">
-            <textarea id="post-content" placeholder="Content"></textarea>
-            <button id="publish-button">Publish</button>
-        </div>
+         <!-- Weekly Wrap #2 Starts here -->
 
-        <div id="posts">
-            <h2>Posts</h2>
-            </div>
-    </div>
+         <!-- Weekly Wrap #3 Starts here -->
 
-    <script src="js/script.js"></script>
-</body>
+         <!-- Weekly Wrap #4 Starts here -->
+
+         <!-- Weekly Wrap #5 Starts here -->
+
+         <!-- Weekly Wrap #6 Starts here -->
+
+         <!-- Weekly Wrap #7 Starts here -->
+
+         <!-- Weekly Wrap #8 Starts here -->
+
+      </main>
+<!-- Page Footer  -->
+      <footer class="page-footer">
+       <p>Copyright &copy; 2025</p>
+      </footer>
+   </body>
 </html>
