Updated Index file with revamped Blog info.
Updated Index file with revamped Blog info.

--- a/durhamj/index.html
+++ b/durhamj/index.html
@@ -13,10 +13,10 @@
       </header>
 <!-- Main Content Area  -->
       <main>
-         <!-- Weekly Wrap #1 Starts Here-->
+         <!-- Module 1.1 Blog Post Starts Here-->
          <article>
             <header class="article-header">
-               <h2>Weekly Wrap - <datetime>4 April, 2025</datetime></h2>
+               <h2>Module 1.1 Blog Post</h2>
             </header>
             <h3>Health Cronut la Croix</h3>
             <p>I'm baby photo booth fingerstache af enamel pin quinoa. Portland unicorn keytar paleo letterpress banjo kinfolk. Pitchfork four loko meditation, locavore marfa af listicle sriracha helvetica cred vexillologist PBR&B. Pop-up hexagon thundercats master cleanse before they sold out, fashion axe copper mug yes plz literally cred mukbang chia gluten-free. Bodega boys skateboard ugh green juice. Hella marxism succulents mumblecore forage kale chips bespoke fixie shoreditch chartreuse tofu before they sold out.</p>
@@ -34,19 +34,17 @@
             </footer>
          </article>
 
-         <!-- Weekly Wrap #2 Starts here -->
+         <!-- Module 1.2 Blog Post Starts here -->
 
-         <!-- Weekly Wrap #3 Starts here -->
+         <!-- Module 2.1 Blog Post Starts here -->
 
-         <!-- Weekly Wrap #4 Starts here -->
+         <!-- Module 2.2 Blog Post Starts here -->
 
-         <!-- Weekly Wrap #5 Starts here -->
+         <!-- Module 2.3 Blog Post Starts here -->
 
-         <!-- Weekly Wrap #6 Starts here -->
+         <!-- Module 3.1 Blog Post Starts here -->
 
-         <!-- Weekly Wrap #7 Starts here -->
-
-         <!-- Weekly Wrap #8 Starts here -->
+         <!-- Module 3.2 Blog Post Starts here -->
 
       </main>
 <!-- Page Footer  -->
